odkaz na formular

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <img class="first_image" src="images/IMG_0361.jpeg" alt="pejsci">
         </div>
         <div class="novinky_hl">
-            <p id = "novinky" class="novinky">Momentálně očekáváme příchod nových štěňátek. O aktuálních informacích vás budeme informovat. Pokud máte zájem, vyplňte náš formulář <a href="index.html" class="formular_odkaz">tu</a>.</p>
+            <p id = "novinky" class="novinky">Momentálně očekáváme příchod nových štěňátek. O aktuálních informacích vás budeme informovat. Pokud máte zájem, vyplňte náš formulář <a href="#formular" class="formular_odkaz">tu</a>.</p>
         </div>
         <div class="kontakt_hl">
             <p id = "kontakt" class="kontakt2">Patricia Borošová <br>+420 774 329 572 <br>borzoi@gmail.com  </p>
@@ -58,7 +58,7 @@
         <div class="tapka"><a href="index.html" class="tapka_odkaz"><img class="tapka" src="images/Group 4588(5).svg" alt="ťapka"></a></div>
     </div> 
         <div class="footer">
-            <form class = "form" action="" method = 'post'>
+            <form id = "formular" class = "form" action="" method = 'post'>
                 <div class="formular">
                     <label for="jmeno">Jméno:</label>
                     <input
